# Score_Gather_Ama

./: .ycm_extra_conf.py  CMakeLists.txt  Exercise.odt  main.cpp
